<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/info"
            android:textColor="#707070"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/current_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/current_settings"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/current_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/current_wifi"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/saved_wifi_ssid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/current_wifi_name"

                    android:textColor="#FFFFFF"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/state"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/real_state"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/current_wifi_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/wifi_ssid"
                android:textSize="16dp" />

            <Button
                android:id="@+id/set_wifi"
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:background="#383838"
                android:text="@string/set_wifi"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />
        </LinearLayout>


        <ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/switcher"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/notification_text_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:hint="Notification text"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/hidden_edit_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="Notification text" />
        </ViewSwitcher>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/edit_wifi"
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:background="#383838"
                android:text="@string/set_notification"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/action"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/enable"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="#009933"
            android:text="@string/button_on"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />

        <Button
            android:id="@+id/disable"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="#FF3300"
            android:text="@string/button_off"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/close"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:background="#0099CC"
            android:text="@string/close"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>
