<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.grudowska.home.homeaway.CustomAlertDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/turnoff_yes"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="#006600"
            android:text="@string/message_yes"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />

        <Button
            android:id="@+id/turnoff_no"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="#CC0000"
            android:text="@string/message_no"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />
    </LinearLayout>
</LinearLayout>
